--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,6 +3,7 @@
     <ul>
         <li>
             <%= link_to("Gallery", gallery_index_path) %>
+            <%= link_to("Alert",'#', onclick:'alert("Please no!")') %>
         </li>
     </ul>
 </h1>
